navbar: reduce ET branding and texts a bit to avoid wrapping
if the navbar content becomes too wide it wraps before it collapses
which hides some text on the main page

--- a/styles/etk.scss
+++ b/styles/etk.scss
@@ -11,7 +11,7 @@
   text-shadow: -.05ex -.05ex .05ex rgba(255,255,255,1.0), .05ex .05ex .05ex rgba(0,0,0,1.0);
   color: #ff4700;
   font-family: 'Didact Gothic';
-  font-size: $navbar-height * 0.60;
+  font-size: $navbar-height * 0.50;
 }
 
 .white-flat{
@@ -22,6 +22,6 @@
   color: #ffffff;
   text-align: right;
   font-family: 'Roboto';
-  font-size: $navbar-height * 0.55;
+  font-size: $navbar-height * 0.45;
   letter-spacing: 0.1ex;
 }
